--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="container">
         <div class="project" id="ptr">
-          <a href="praytherosarynyc.html">praytherosary.nyc</a>
+          <a href="./projects/praytherosarynyc.html">praytherosary.nyc</a>
         </div>
         <div class="project" id="ethicsviz">
           <a href="praytherosary.nyc">EthicsViz</a>
