--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -31,7 +31,7 @@
           A fluid, solemn website for guiding users through religious prayers.
         </div>
         <div class="content">
-          <img src="./images/ptr desktop.png" id="ptrdesktop">
+          <img src="../images/ptr.png" id="ptrdesktop">
         </div>
         <div class="content">
           The user journey was predetermined by the content of the system(the prayer).
