--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!--Stylesheet-->
-    <link rel = "stylesheet" type = "text/css" href = "./stylesheets/indexStyle.css">
+    <link rel = "stylesheet" type = "text/css" href = "../stylesheets/indexStyle.css">
 
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
