additional project templates

--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <!--Stylesheet-->
-    <link rel = "stylesheet" type = "text/css" href = "./stylesheets/indexStyle.css">
+    <link rel = "stylesheet" type = "text/css" href = "../stylesheets/indexStyle.css">
 
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
@@ -23,27 +23,23 @@
     <div class="base">
       <div class="title">
         <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <a href="#" id="projectTitle" target="_blank">EthicsViz</a>
       </div>
       <div class="container">
-        <div class="project" id="ptr">
-          <a href="./projects/praytherosarynyc.html">praytherosary.nyc</a>
+
+        <div class="description">
+          A pervasive data visualization and analysis tool.
         </div>
-        <div class="project" id="ethicsviz">
-          <a href="./projects/ethicsviz.html">EthicsViz</a>
+        <div class="content">
+          <img src="../images/ptr.PNG" id="ptrdesktop">
         </div>
-        <div class="project" id="apples">
-          <a href="./projects/theatrenow.html">TheatreNow</a>
+        <div class="content">
+          Combining multiple data sources to provide individuals with a look into what companies have
+          collected about them, and how that data may be used.
+          <br/>
+          <br/>
         </div>
 
-        <div class="project" id="groupme">
-          <a href="./projects/groupme.html">GroupMe</a>
-        </div>
-        <div class="project" id="temp">
-          <a href="praytherosary.nyc">Temp</a>
-        </div>
-        <div class="project" id="temp1">
-          <a href="praytherosary.nyc">Temp1</a>
-        </div>
       </div>
 
       <div class="connect">
@@ -51,7 +47,6 @@
         <a href="#">github</a>
         <a href="#">linkedin</a>
         <a href="#">twitter</a>
-
       </div>
   </div>
   </body>
