additional project templates

--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -38,6 +38,7 @@
           collected about them, and how that data may be used.
           <br/>
           <br/>
+          Competitor Research, Data Gathering, Data Analysis, Data Visualization
         </div>
 
       </div>
