--- a/projects/groupme.html
+++ b/projects/groupme.html
@@ -37,6 +37,8 @@
           Restructuring and recluttering the user interface for maximum efficiency.
           <br/>
           <br/>
+          Usability Testing, User Research, Personas, Heuristic Evaluation, Cognitive Walkthrough
+          Sketches, Mockups, Prototypes
         </div>
 
       </div>
