--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -37,6 +37,8 @@
           Guiding users through processes to make their journey through the system personal and intuitive.
           <br/>
           <br/>
+          User research, Personas, User Stories, Storyboards, Sketches, Mockups, Prototypes, High fidelity Prototype,
+          Front-End, Back-end
         </div>
 
       </div>
