--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -28,10 +28,12 @@
       <div class="container">
 
         <div class="description">
-          A n intuitive theatrical rights acquisition website
+          An intuitive theatrical rights acquisition website
         </div>
         <div class="content">
-          <img src="../images/ptr.PNG" id="ptrdesktop">
+          <img src="../images/theatrenow1.PNG" id="ptrdesktop">
+          <img src="../images/theatrenow2.PNG" id="ptrdesktop">
+
         </div>
         <div class="content">
           Guiding users through processes to make their journey through the system personal and intuitive.
