--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -31,7 +31,7 @@
           A pervasive data visualization and analysis tool.
         </div>
         <div class="content">
-          <img src="../images/ptr.PNG" id="ptrdesktop">
+          <img src="../images/ethicsviz.PNG" id="ptrdesktop">
         </div>
         <div class="content">
           Combining multiple data sources to provide individuals with a look into what companies have
