--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -45,9 +45,9 @@
 
       <div class="connect">
         Connect with me!<br/>
-        <a href="#">github</a>
-        <a href="#">linkedin</a>
-        <a href="#">twitter</a>
+        <a href="https://github.com/josterga">Github</a>
+        <a href="https://www.linkedin.com/in/jamesostergaard/">LinkedIn</a>
+        <a href="https://twitter.com/OstergaardJames">Twitter</a>
       </div>
   </div>
   </body>
