fixing id/class definitions

--- a/projects/groupme.html
+++ b/projects/groupme.html
@@ -31,7 +31,7 @@
           A ux/ui redesign for the GroupMe messaging platform
         </div>
         <div class="content">
-          <img src="../images/ptr.PNG" id="ptrdesktop">
+          <img src="../images/ptr.PNG" class="ptrdesktop">
         </div>
         <div class="content">
           Restructuring and recluttering the user interface for maximum efficiency.
@@ -45,9 +45,9 @@
 
       <div class="connect">
         Connect with me!<br/>
-        <a href="#">github</a>
-        <a href="#">linkedin</a>
-        <a href="#">twitter</a>
+        <a href="https://github.com/josterga">Github</a>
+        <a href="https://www.linkedin.com/in/jamesostergaard/">LinkedIn</a>
+        <a href="https://twitter.com/OstergaardJames">Twitter</a>
       </div>
   </div>
   </body>
