--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -31,8 +31,8 @@
           An intuitive theatrical rights acquisition website
         </div>
         <div class="content">
-          <img src="../images/theatrenow1.PNG" id="ptrdesktop">
-          <img src="../images/theatrenow2.PNG" id="ptrdesktop">
+          <img src="../images/theatrenow1.PNG" class="ptrdesktop">
+          <img src="../images/theatrenow2.PNG" class="ptrdesktop">
 
         </div>
         <div class="content">
