--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -31,7 +31,7 @@
           A fluid, solemn website for guiding users through religious prayers.
         </div>
         <div class="content">
-          <img src="../images/ptr.PNG" id="ptrdesktop">
+          <img src="../images/ptr.PNG" class="ptrdesktop">
         </div>
         <div class="content">
           The user journey was predetermined by the content of the system(the prayer).
@@ -49,9 +49,9 @@
 
       <div class="connect">
         Connect with me!<br/>
-        <a href="#">github</a>
-        <a href="#">linkedin</a>
-        <a href="#">twitter</a>
+        <a href="https://github.com/josterga">Github</a>
+        <a href="https://www.linkedin.com/in/jamesostergaard/">LinkedIn</a>
+        <a href="https://twitter.com/OstergaardJames">Twitter</a>
       </div>
   </div>
   </body>
