--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -31,7 +31,8 @@
           A pervasive data visualization and analysis tool.
         </div>
         <div class="content">
-          <img src="../images/ethicsviz.PNG" class="ptrdesktop">
+          <img src="../images/ethicsviz1.PNG" class="ptrdesktop">
+          <img src="../images/ethicsviz2.PNG" class="ptrdesktop">
         </div>
         <div class="content">
           Combining multiple data sources to provide individuals with a look into what companies have
