--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <!--Stylesheet-->
@@ -33,7 +34,6 @@
         <div class="content">
           <img src="../images/theatrenow1.PNG" class="ptrdesktop">
           <img src="../images/theatrenow2.PNG" class="ptrdesktop">
-
         </div>
         <div class="content">
           Guiding users through processes to make their journey through the system personal and intuitive.
