--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
     <!--Descriptions-->
-    <title>jamesostergaard.com</title>
+    <title>James Ostergaard: User Experience Designer</title>
     <meta name="Description" content="Portfolio for James Ostergaard.">
     <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 
@@ -23,10 +23,21 @@
   <body>
     <div class="base">
       <div class="title">
-        <a href="http://jamesostergaard.com">James Ostergaard</a>
+        About
       </div>
       <div class="container">
-        <div class="project" id="ptr">
+        Projects
+  </div>
+    <div class="about">
+      I'm a recent graduate of UC Irvine
+      I have a passion for sketching, making beautiful designs reach people.
+      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <a href="mailto:james@jamesostergaard.com">email</a>
+      <a href="https://www.instagram.com/jamesostergaard/">instagram</a>
+      <a href="https://www.linkedin.com/in/jamesostergaard/">linkedin</a>
+    </div>
+    <div class="projects">
+      <div class="project" id="ptr">
           <a href="./projects/praytherosarynyc.html">praytherosary.nyc</a>
         </div>
         <div class="project" id="ethicsviz">
@@ -35,18 +46,13 @@
         <div class="project" id="apples">
           <a href="./projects/theatrenow.html">TheatreNow</a>
         </div>
-
+        <div class="project" id="healthful">
+          <a href="./projects/healthful.html">Healthful</a>
+        </div>
         <div class="project" id="groupme">
           <a href="./projects/groupme.html">GroupMe</a>
         </div>
       </div>
-
-      <div class="connect">
-        Connect with me!<br/>
-        <a href="https://github.com/josterga">Github</a>
-        <a href="https://www.linkedin.com/in/jamesostergaard/">LinkedIn</a>
-        <a href="https://twitter.com/OstergaardJames">Twitter</a>
-      </div>
-  </div>
+    </div>
   </body>
 </html>
