--- a/projects/groupme.html
+++ b/projects/groupme.html
@@ -22,11 +22,11 @@
 
   <body>
     <div class="base">
-      <div class="title">
+      <div class="about">
         <a href="http://jamesostergaard.com">James Ostergaard</a>
         <a href="#" id="projectTitle" target="_blank">GroupMe Redesign</a>
       </div>
-      <div class="container">
+      <div class="projects">
 
         <div class="description">
           A ux/ui redesign for the GroupMe messaging platform
@@ -52,12 +52,6 @@
 
       </div>
 
-      <div class="connect">
-        Connect with me!<br/>
-        <a href="https://github.com/josterga">Github</a>
-        <a href="https://www.linkedin.com/in/jamesostergaard/">LinkedIn</a>
-        <a href="https://twitter.com/OstergaardJames">Twitter</a>
-      </div>
   </div>
   </body>
 </html>
