--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -22,11 +22,11 @@
 
   <body>
     <div class="base">
-      <div class="title">
+      <div class="about">
         <a href="http://jamesostergaard.com">James Ostergaard</a>
         <a href="http://praytherosary.nyc" id="projectTitle" target="_blank">praytherosary.nyc</a>
       </div>
-      <div class="container">
+      <div class="projects">
 
         <div class="description">
           A fluid, solemn website for guiding users through religious prayers.
@@ -48,12 +48,6 @@
 
       </div>
 
-      <div class="connect">
-        Connect with me!<br/>
-        <a href="https://github.com/josterga">Github</a>
-        <a href="https://www.linkedin.com/in/jamesostergaard/">LinkedIn</a>
-        <a href="https://twitter.com/OstergaardJames">Twitter</a>
-      </div>
   </div>
   </body>
 </html>
