--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel = "stylesheet" type = "text/css" href = "./stylesheets/indexStyle.css">
 
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet">
 
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -27,11 +27,12 @@
       </div>
       <div class="container">
         Projects
-  </div>
+      </div>
     <div class="about">
+      <br><br><br><br><br><br>
       I'm a recent graduate of UC Irvine
       I have a passion for sketching, making beautiful designs reach people.
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br><br><br>
       <a href="mailto:james@jamesostergaard.com">email</a>
       <a href="https://www.instagram.com/jamesostergaard/">instagram</a>
       <a href="https://www.linkedin.com/in/jamesostergaard/">linkedin</a>
