--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -5,8 +5,7 @@
     <link rel = "stylesheet" type = "text/css" href = "../stylesheets/indexStyle.css">
 
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet">
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
@@ -24,21 +23,20 @@
     <div class="base">
       <div class="about">
         <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <br>
         <a href="#" id="projectTitle" target="_blank">EthicsViz</a>
       </div>
       <div class="projects">
 
         <div class="description">
           A pervasive data visualization and analysis tool.
-        </div>
-        <div class="content">
+          <br>
           <img src="../images/ethicsviz1.PNG" class="ptrdesktop">
+          <br>
           <img src="../images/ethicsviz2.PNG" class="ptrdesktop">
-        </div>
-        <div class="content">
+          <br>
           Combining multiple data sources to provide individuals with a look into what companies have
           collected about them, and how that data may be used.
-          <br/>
           <br/>
           Competitor Research, Data Gathering, Data Analysis, Data Visualization
         </div>
