--- a/projects/groupme.html
+++ b/projects/groupme.html
@@ -5,7 +5,7 @@
     <link rel = "stylesheet" type = "text/css" href = "../stylesheets/indexStyle.css">
 
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
+        <link href="<link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet"> ://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
 
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -24,17 +24,16 @@
     <div class="base">
       <div class="about">
         <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <br>
         <a href="#" id="projectTitle" target="_blank">GroupMe Redesign</a>
       </div>
       <div class="projects">
 
         <div class="description">
           A ux/ui redesign for the GroupMe messaging platform
-        </div>
-        <div class="content">
+          <br>
           <img src="../images/groupme.PNG" class="ptrdesktop">
-        </div>
-        <div class="content">
+          <br>
           Restructuring and recluttering the user interface for maximum efficiency.
           <br/>
           <br/>
