--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -5,8 +5,7 @@
     <link rel = "stylesheet" type = "text/css" href = "../stylesheets/indexStyle.css">
 
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet">
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
@@ -24,17 +23,16 @@
     <div class="base">
       <div class="about">
         <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <br>
         <a href="http://praytherosary.nyc" id="projectTitle" target="_blank">praytherosary.nyc</a>
       </div>
       <div class="projects">
 
         <div class="description">
           A fluid, solemn website for guiding users through religious prayers.
-        </div>
-        <div class="content">
+        <br>
           <img src="../images/ptr.PNG" class="ptrdesktop">
-        </div>
-        <div class="content">
+      <br>
           The user journey was predetermined by the content of the system(the prayer).
             My focus was on creating an engaging experience.
             This was done by adding images that corresponded to the text, which seems simple, but the competitors websites required studying the images and text before being able to put them together.
