--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -5,8 +5,7 @@
     <link rel = "stylesheet" type = "text/css" href = "../stylesheets/indexStyle.css">
 
     <!--Google Font-->
-    <link href="https://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet">
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
@@ -24,18 +23,17 @@
     <div class="base">
       <div class="about">
         <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <br>
         <a href="#" id="projectTitle" target="_blank">TheatreNow</a>
       </div>
       <div class="projects">
 
         <div class="description">
           An intuitive theatrical rights acquisition website
-        </div>
-        <div class="content">
+        <br>
           <img src="../images/theatrenow1.PNG" class="ptrdesktop">
           <img src="../images/theatrenow2.PNG" class="ptrdesktop">
-        </div>
-        <div class="content">
+      <br>
           Guiding users through processes to make their journey through the system personal and intuitive.
           <br/>
           <br/>
