--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <!--Stylesheet-->
-    <link rel = "stylesheet" type = "text/css" href = "./stylesheets/indexStyle.css">
+    <link rel = "stylesheet" media="screen and (min-width: 900px)" href="./stylesheets/indexStyle.css">
+    <link rel = "stylesheet" media="screen and (min-width: 370px)" href="./stylesheets/mobileStyle.css">
 
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet">
@@ -34,8 +35,8 @@
       I have a passion for sketching, making beautiful designs reach people.
       <br><br><br><br><br><br><br><br><br>
       <a href="mailto:james@jamesostergaard.com">email</a>
-      <a href="https://www.instagram.com/jamesostergaard/">instagram</a>
       <a href="https://www.linkedin.com/in/jamesostergaard/">linkedin</a>
+      <a href="https://www.instagram.com/jamesostergaard/">instagram</a>
     </div>
     <div class="projects">
       <div class="project" id="ptr">
