--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <!--Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet">
 
+    <!--Google Analytics-->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-128992215-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-128992215-2');
+    </script>
+
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
@@ -42,14 +53,14 @@
       <div class="project" id="ptr">
           <a href="./projects/praytherosarynyc.html">praytherosary.nyc</a>
         </div>
-        <div class="project" id="ethicsviz">
-          <a href="./projects/ethicsviz.html">EthicsViz</a>
-        </div>
         <div class="project" id="apples">
           <a href="./projects/theatrenow.html">TheatreNow</a>
         </div>
         <div class="project" id="healthful">
           <a href="./projects/healthful.html">Healthful</a>
+        </div>
+        <div class="project" id="ethicsviz">
+          <a href="./projects/ethicsviz.html">EthicsViz</a>
         </div>
         <div class="project" id="groupme">
           <a href="./projects/groupme.html">GroupMe</a>
