--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -25,6 +25,9 @@
         <a href="http://jamesostergaard.com">James Ostergaard</a>
         <br>
         <a href="http://praytherosary.nyc" id="projectTitle" target="_blank">praytherosary.nyc</a>
+        <br>
+        Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Front-end Development
+        <br>Interaction Design
       </div>
       <div class="projects">
 
