--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -24,7 +24,10 @@
       <div class="about">
         <a href="http://jamesostergaard.com">James Ostergaard</a>
         <br>
-        <a href="#" id="projectTitle" target="_blank">TheatreNow</a>
+        <a href="http://theatrenow.azurewebsites.net/main/home.html" id="projectTitle">TheatreNow</a>
+        <br>
+        Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Iterative Front-end Development
+        <br>Interaction Design<br>Social Media Marketing<br>Team Management<br>Requirements Pivot
       </div>
       <div class="projects">
 
