--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -26,16 +26,18 @@
         <br>
         <a href="http://praytherosary.nyc" id="projectTitle" target="_blank">praytherosary.nyc</a>
         <br>
+        Designed Website, branding
+        <br>
         Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Front-end Development
         <br>Interaction Design
       </div>
       <div class="projects">
 
-        <div class="description">
+        <div class="description"
           A fluid, solemn website for guiding users through religious prayers.
-        <br>
+          <br>
           <img src="../images/ptr.PNG" class="ptrdesktop">
-      <br>
+          <br>
           The user journey was predetermined by the content of the system(the prayer).
             My focus was on creating an engaging experience.
             This was done by adding images that corresponded to the text, which seems simple, but the competitors websites required studying the images and text before being able to put them together.
