--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
     <div class="about">
       <br><br><br><br><br><br>
       I'm a recent graduate of UC Irvine
-      I have a passion for sketching, making beautiful designs reach people.
+      <br>
+      I have a passion for design
+      <br>
+      I am driven by visually organizing information to set mood, emotion, and purpose
+      <br>
+      Located in Orange County, CA
+
       <br><br><br><br><br><br><br><br><br>
       <a href="mailto:james@jamesostergaard.com">email</a>
       <a href="https://www.linkedin.com/in/jamesostergaard/">linkedin</a>
