--- a/index.html
+++ b/index.html
@@ -41,14 +41,27 @@
         Projects
       </div>
     <div class="about">
-      <br><br><br><br><br><br>
+      <br><br><br><br><br>
       I'm a recent graduate of UC Irvine
+      <br>
+      Located in Orange County, CA
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
       <br>
       I have a passion for design
       <br>
-      I am driven by visually organizing information to set mood, emotion, and purpose
       <br>
-      Located in Orange County, CA
+      <br>
+      I am driven to guide users
+      <br>
+      <br>
+      through a design
+      <br>
+      <br>
+      which has mood, emotion, and purpose
 
       <br><br><br><br><br><br><br><br><br>
       <a href="mailto:james@jamesostergaard.com">email</a>
