--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -22,23 +22,46 @@
   <body>
     <div class="base">
       <div class="about">
+        <br>
+        <br>
         <a href="http://jamesostergaard.com">James Ostergaard</a>
         <br>
+        <br>
+        <br>
         <a href="#" id="projectTitle" target="_blank">EthicsViz</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        Accomplished:
+        <br>
+        Designed Visualizations<br>Data Collection<br>Data Manipulation and Analysis
+        <br>
+        <br>
+        Tools:
+        <br>
+        Competitor Research<br>Data Gathering<br>Data Analysis<br>Data Visualization<br>Python<br>JavaScript<br>HTML/CSS<br>D3 Library<br>Spotify API<br>Natural Language Processing
+        <br>
+        <br>
+        <br>
+        <br>
       </div>
       <div class="projects">
 
         <div class="description">
-          A pervasive data visualization and analysis tool.
+          EthicsViz helps people look into the pervasive data associated with their digital footprint.
           <br>
           <img src="../images/ethicsviz1.PNG" class="ptrdesktop">
           <br>
           <img src="../images/ethicsviz2.PNG" class="ptrdesktop">
           <br>
+          The first image is a mockup of a potential visualization created through EthicsViz.
+          <br>
+          The second image is a visualization rendered by EthicsViz
+          <br>
           Combining multiple data sources to provide individuals with a look into what companies have
           collected about them, and how that data may be used.
           <br/>
-          Competitor Research, Data Gathering, Data Analysis, Data Visualization
         </div>
 
       </div>
