--- a/projects/groupme.html
+++ b/projects/groupme.html
@@ -5,7 +5,7 @@
     <link rel = "stylesheet" type = "text/css" href = "../stylesheets/indexStyle.css">
 
     <!--Google Font-->
-        <link href="<link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet"> ://fonts.googleapis.com/css?family=Arimo|IBM+Plex+Sans:300|Karla" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Bree+Serif|Comfortaa|Merriweather&display=swap" rel="stylesheet">
 
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -23,9 +23,29 @@
   <body>
     <div class="base">
       <div class="about">
+        <br>
+        <br>
         <a href="http://jamesostergaard.com">James Ostergaard</a>
         <br>
+        <br>
+        <br>
         <a href="#" id="projectTitle" target="_blank">GroupMe Redesign</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        Accomplished:
+        <br>
+        Usability Testing<br>User Research<br>Personas<br>Heuristic Evaluation<br>Cognitive Walkthrough
+        <br>
+        <br>
+        Tools:
+        <br>
+        Sketches<br>Mockups<br>Prototypes<br>
+        <br>
+        <br>
+        <br>
+        <br>
       </div>
       <div class="projects">
 
@@ -35,10 +55,6 @@
           <img src="../images/groupme.PNG" class="ptrdesktop">
           <br>
           Restructuring and recluttering the user interface for maximum efficiency.
-          <br/>
-          <br/>
-          Usability Testing, User Research, Personas, Heuristic Evaluation, Cognitive Walkthrough
-          Sketches, Mockups, Prototypes
           <br/>
           <br/>
           Major contributions to the
