--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -22,19 +22,35 @@
   <body>
     <div class="base">
       <div class="about">
+        <br>
+        <br>
         <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <br>
+        <br>
         <br>
         <a href="http://praytherosary.nyc" id="projectTitle" target="_blank">praytherosary.nyc</a>
         <br>
-        Designed Website, branding
+        <br>
+        <br>
+        <br>
+        Accomplished:
+        <br>
+        Designing Website<br>Branding
+        <br>
+        <br>
+        Tools:
         <br>
         Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Front-end Development
         <br>Interaction Design
+        <br>
+        <br>
+        <br>
+        <br>
       </div>
       <div class="projects">
 
-        <div class="description"
-          A fluid, solemn website for guiding users through religious prayers.
+        <div class="description">
+          A solemn website for fluidly guiding users through religious prayers.
           <br>
           <img src="../images/ptr.PNG" class="ptrdesktop">
           <br>
