--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -22,12 +22,30 @@
   <body>
     <div class="base">
       <div class="about">
+        <br>
+        <br>
         <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <br>
+        <br>
         <br>
         <a href="http://theatrenow.azurewebsites.net/main/home.html" id="projectTitle">TheatreNow</a>
         <br>
+        <br>
+        <br>
+        <br>
+        Accomplished:
+        <br>
+        Collaborative Website Design <br>Rapid Prototyping<br>Sponsor Approval<br>Social Media Marketing Generator Design
+        <br>
+        <br>
+        Tools:
+        <br>
         Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Iterative Front-end Development
         <br>Interaction Design<br>Social Media Marketing<br>Team Management<br>Requirements Pivot
+        <br>
+        <br>
+        <br>
+        <br>
       </div>
       <div class="projects">
 
