--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -41,7 +41,7 @@
         Tools:
         <br>
         Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Front-end Development
-        <br>Interaction Design
+        <br>Interaction Design<br>HTML/CSS<br>Balsamiq<br>
         <br>
         <br>
         <br>
@@ -62,7 +62,6 @@
           <br/>
           The experience and interactions that this system creates are religious.
           The color palette of muted white, brown and pink create an atmosphere of solemnity, enhanced by the lack of distractions.
-
         </div>
 
       </div>
