--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -41,7 +41,7 @@
         Tools:
         <br>
         Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Iterative Front-end Development
-        <br>Interaction Design<br>Social Media Marketing<br>Team Management<br>Requirements Pivot
+        <br>Interaction Design<br>Team Management<br>Requirements Pivot<br>User research<br>Personas<br>User Stories<br>Storyboards<br>HTML/CSS<br>Adobe XD<br>Figma<br>
         <br>
         <br>
         <br>
@@ -51,15 +51,13 @@
 
         <div class="description">
           An intuitive theatrical rights acquisition website
-        <br>
+          <br>
           <img src="../images/theatrenow1.PNG" class="ptrdesktop">
           <img src="../images/theatrenow2.PNG" class="ptrdesktop">
-      <br>
+          <br>
           Guiding users through processes to make their journey through the system personal and intuitive.
           <br/>
           <br/>
-          User research, Personas, User Stories, Storyboards, Sketches, Mockups, Prototypes, High fidelity Prototype,
-          Front-End, Back-end
         </div>
 
       </div
