--- a/projects/healthful.html
+++ b/projects/healthful.html
@@ -27,7 +27,7 @@
         <a href="http://jamesostergaard.com">James Ostergaard</a>
         <br><br/>
         <br/>
-        <a href="https://josterga.github.io/INF172-W19.github.io/index.html" id="projectTitle" target="_blank">Healthful Website Design and Development</a>
+        <a href="https://josterga.github.io/INF172-W19.github.io/index.html" id="projectTitle" target="_blank">Healthful</a>
         <br/>
         <br/>
         <br/>
