--- a/index.html
+++ b/index.html
@@ -34,12 +34,7 @@
 
   <body>
     <div class="base">
-      <div class="title">
-        About
-      </div>
-      <div class="container">
-        Projects
-      </div>
+
     <div class="about">
       <br><br><br><br><br>
       I'm a recent graduate of UC Irvine
@@ -79,12 +74,15 @@
         <div class="project" id="healthful">
           <a href="./projects/healthful.html">Healthful</a>
         </div>
-        <div class="project" id="ethicsviz">
-          <a href="./projects/ethicsviz.html">EthicsViz</a>
-        </div>
         <div class="project" id="groupme">
           <a href="./projects/groupme.html">GroupMe</a>
         </div>
+      </div>
+    <div class="projects">
+      <div class="project" id="ethicsviz">
+        <a href="./projects/ethicsviz.html">EthicsViz</a>
+      </div>
+    </div>
       </div>
     </div>
   </body>
