--- a/index.html
+++ b/index.html
@@ -33,57 +33,47 @@
   </head>
 
   <body>
-    <div class="base">
-
-    <div class="about">
-      <br><br><br><br><br>
-      I'm a recent graduate of UC Irvine
-      <br>
-      Located in Orange County, CA
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      I have a passion for design
-      <br>
-      <br>
-      <br>
-      I am driven to guide users
-      <br>
-      <br>
-      through a design
-      <br>
-      <br>
-      which has mood, emotion, and purpose
-
-      <br><br><br><br><br><br><br><br><br>
-      <a href="mailto:james@jamesostergaard.com">email</a>
-      <a href="https://www.linkedin.com/in/jamesostergaard/">linkedin</a>
-      <br>
-      <br>
-    </div>
-    <div class="projects">
-      <div class="project" id="ptr">
-          <a href="./projects/praytherosarynyc.html">praytherosary.nyc</a>
+      <div class="about">
+        <p id="title">
+        James Ostergaard
+        </p>
+        <p id="bio">
+        I am a UX/UI Designer in Orange County, CA
+        <br>
+        </p>
+        <p id="secondary">
+        My goal is to understand the context of past design so I may influence decisions for future design
+        </p>
+        <p id="tertiary">
+        Life is chaos, designed
+        <br>
+        Design is history, valued
+        <br>
+        Value is reaction, reproduced
+        </p>
+        <a href="mailto:james@jamesostergaard.com">email</a>
+        <a href="https://www.linkedin.com/in/jamesostergaard/">linkedin</a>
+      </div>
+      <div class="projects">
+        <p id="ux">UX Projects</p>
+        <div class="project" id="ptr">
+            <a href="./projects/praytherosarynyc.html">praytherosary.nyc</a>
+          </div>
+          <div class="project" id="apples">
+            <a href="./projects/theatrenow.html">TheatreNow</a>
+          </div>
+          <div class="project" id="healthful">
+            <a href="./projects/healthful.html">Healthful</a>
+          </div>
+          <div class="project" id="groupme">
+            <a href="./projects/groupme.html">GroupMe</a>
+          </div>
         </div>
-        <div class="project" id="apples">
-          <a href="./projects/theatrenow.html">TheatreNow</a>
-        </div>
-        <div class="project" id="healthful">
-          <a href="./projects/healthful.html">Healthful</a>
-        </div>
-        <div class="project" id="groupme">
-          <a href="./projects/groupme.html">GroupMe</a>
+      <div class="projects">
+        <p id="dv">Data Visualization Projects</p>
+        <div class="project" id="ethicsviz">
+          <a href="./projects/ethicsviz.html">EthicsViz</a>
         </div>
       </div>
-    <div class="projects">
-      <div class="project" id="ethicsviz">
-        <a href="./projects/ethicsviz.html">EthicsViz</a>
-      </div>
-    </div>
-      </div>
-    </div>
   </body>
 </html>
