--- a/projects/healthful.html
+++ b/projects/healthful.html
@@ -24,7 +24,7 @@
       <div class="about">
         <br/>
         <br/>
-        <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <a href="http://jamesostergaard.com" id="title">James Ostergaard</a>
         <br><br/>
         <br/>
         <a href="https://josterga.github.io/INF172-W19.github.io/index.html" id="projectTitle" target="_blank">Healthful</a>
@@ -32,18 +32,28 @@
         <br/>
         <br/>
         <br/>
-        Accomplished:
-        <br>
-        Technology Team Lead<br>Oversee Website Development<br>Branding
-        <br/>
-        <br/>
-        Tools:
-        <br>
-        Front-End Development<br>Photoshop
-        <br/>
-        <br/>
-        <br/>
-        <br/>
+        <div class="columns">
+          <div id="accom">
+            <p id="secondary">
+              Accomplished
+            </p>
+            <p id="tertiary">
+              <ul>
+              <li>Technology Lead</li><li>Branding</li>
+            </ul>
+            </p>
+          </div>
+          <div id="tools">
+            <p id="secondary">
+              Tools
+            </p>
+            <p id="tertiary">
+              <ul>
+              <li>Front-End Dev</li><li>Photoshop</li><li>HTML</li><li>CSS</li><li>User Research
+              </ul>
+          </p>
+          </div>
+        </div>
       </div>
       <div class="projects">
 
@@ -54,7 +64,7 @@
           <br>
           The concept for this website is to function as a reliable hub of emerency information commonly needed by college students.
           <br>
-          It is a high-fidelity mockup of a dynamic website providing resources based on location.
+          By combining user research with design evaluation, we were able to create a high-fidelity mockup of a dynamic website providing resources based on location.
         </div>
 
       </div>
