--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -24,7 +24,7 @@
       <div class="about">
         <br>
         <br>
-        <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <a href="http://jamesostergaard.com" id="title">James Ostergaard</a>
         <br>
         <br>
         <br>
@@ -33,31 +33,63 @@
         <br>
         <br>
         <br>
-        Accomplished:
-        <br>
-        Collaborative Website Design <br>Rapid Prototyping<br>Sponsor Approval<br>Social Media Marketing Generator Design
-        <br>
-        <br>
-        Tools:
-        <br>
-        Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Iterative Front-end Development
-        <br>Interaction Design<br>Team Management<br>Requirements Pivot<br>User research<br>Personas<br>User Stories<br>Storyboards<br>HTML/CSS<br>Adobe XD<br>Figma<br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <div class="columns">
+          <div id="accom">
+            <p id="secondary">
+              Accomplished
+            </p>
+            <p id="tertiary">
+              <ul>
+              <li>Collaborative Website Design</li><li>Rapid Prototyping</li><li>Sponsor Approval</li><li>Social Media Marketing Generator Design</li>
+            </ul>
+            </p>
+          </div>
+          <div id="tools">
+            <p id="secondary">
+              Tools
+            </p>
+            <p id="tertiary">
+              <ul>
+                <li>Sketching</li><li>Wireframing</li><li>Prototyping</li><li>Mockups</li><li>Iterative Front-end Dev
+              </li><li>Interaction Design</li><li>Team Management</li><li>Requirements Pivot</li><li>User research</li><li>Personas</li><li>User Stories</li><li>Storyboards</li><li>HTML/CSS</li><li>Adobe XD</li><li>Figma</li>
+            </ul>
+          </p>
+          </div>
+        </div>
       </div>
       <div class="projects">
 
         <div class="description">
           An intuitive theatrical rights acquisition website
           <br>
+          Our UX team worked collaboratively on developing a high-fidelity prototype website. Initially creating mockups in AdobeXD such as the one below.
+          <br>
           <img src="../images/theatrenow1.PNG" class="ptrdesktop">
+          <br>
+          During each sprint we came together and evaluated our current designs before moving on to the next prototype phase.
+          <br>
+          The image below represents the result of a design meeting and an interface redesign implemented in a high-fidelity prototype.
+          <br>
           <img src="../images/theatrenow2.PNG" class="ptrdesktop">
           <br>
-          Guiding users through processes to make their journey through the system personal and intuitive.
-          <br/>
-          <br/>
+          <br>
+          Over the 20 weeks this project covered, our sponsors presented us with a requirements pivot which changed the basis of our entire design concepts.
+          <br>
+          We began to redesign and prototype based on the new requirements, as well as create new features.
+          <br>
+          <img src="../images/theatrenow3.PNG" class="ptrdesktop">
+          <br>
+          One feature which contributed to the success of the redesign was a social media content generator.
+          <br>
+          The main users of this system are high school theater programs, and our website was designed to make marketing their productions seamless.
+          <br>
+          I designed a simple social media post generator which users could populate with their own data and instantly share across platforms to market their production.
+          <br>
+          <img src="../images/theatrenow4.PNG" class="ptrdesktop">
+          <br>
+          This generator can be used for multiple types of social media post, allowing for consistency with each production, and convenience for users.
+          <br>
+          What was important for this project was seeing users needs, understanding the sponsor needs and requirements, and going above and beyond when designing.
         </div>
 
       </div
