--- a/projects/ethicsviz.html
+++ b/projects/ethicsviz.html
@@ -24,7 +24,7 @@
       <div class="about">
         <br>
         <br>
-        <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <a href="http://jamesostergaard.com" id="title">James Ostergaard</a>
         <br>
         <br>
         <br>
@@ -33,34 +33,52 @@
         <br>
         <br>
         <br>
-        Accomplished:
-        <br>
-        Designed Visualizations<br>Data Collection<br>Data Manipulation and Analysis
-        <br>
-        <br>
-        Tools:
-        <br>
-        Competitor Research<br>Data Gathering<br>Data Analysis<br>Data Visualization<br>Python<br>JavaScript<br>HTML/CSS<br>D3 Library<br>Spotify API<br>Natural Language Processing
-        <br>
-        <br>
-        <br>
-        <br>
+        <div class="columns">
+          <div id="accom">
+            <p id="secondary">
+              Accomplished
+            </p>
+            <p id="tertiary">
+              <ul>
+              <li>Data Visualization</li><li>Data Collection</li><li>Data Manipulation and Analysis</li>
+            </ul>
+            </p>
+          </div>
+          <div id="tools">
+            <p id="secondary">
+              Tools
+            </p>
+            <p id="tertiary">
+              <ul>
+
+              <li>Competitor Research</li><li>Data Gathering</li><li>Data Analysis</li><li>Data Visualization</li><li>Python</li><li>JavaScript</li><li>HTML/CSS</li><li>D3 Library</li><li>Spotify API</li><li>Natural Language Processing</li>
+            </ul>
+          </p>
+          </div>
+        </div>
       </div>
       <div class="projects">
 
         <div class="description">
           EthicsViz helps people look into the pervasive data associated with their digital footprint.
           <br>
+          The concept was to gather available data from multiple sources; Google Takeout, Spotify Data Request.
+          <br>
+          The data is available free to the users, as well as companies, and other partners.
+          <br>
+          By building a tool to visualize personal data, we could present to users the kinds of inferrences that companies with access to this data could make about them as users.
+          <br>
+          The image below is a mockup of a conceptual visualization combining Google Search and Spotify listening history over one particular week.
+          <br>
+          By marking each data point with a sentiment value, we could reflect the mood of the user and present patterns in their behavior.
+          <br>
           <img src="../images/ethicsviz1.PNG" class="ptrdesktop">
+          <br>
+          Below is a running prototype of the above conveptual visualization. Combining data sources to present hourly sentiment analysis over one week of data collection.
           <br>
           <img src="../images/ethicsviz2.PNG" class="ptrdesktop">
           <br>
-          The first image is a mockup of a potential visualization created through EthicsViz.
-          <br>
-          The second image is a visualization rendered by EthicsViz
-          <br>
-          Combining multiple data sources to provide individuals with a look into what companies have
-          collected about them, and how that data may be used.
+          What was important about this project was understanding what data in a set is important, and what can be expanded. By running data through a sentiment analysis processor, we were able to bring a new element into the visualization and create a more intuative presentation of users' data.
           <br/>
         </div>
 
