--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -24,7 +24,7 @@
       <div class="about">
         <br>
         <br>
-        <a href="http://jamesostergaard.com">James Ostergaard</a>
+        <a href="http://jamesostergaard.com" id="title">James Ostergaard</a>
         <br>
         <br>
         <br>
@@ -33,24 +33,35 @@
         <br>
         <br>
         <br>
-        Accomplished:
-        <br>
-        Designing Website<br>Branding
-        <br>
-        <br>
-        Tools:
-        <br>
-        Sketching<br>Wireframing<br>Prototyping<br>Mockups<br>Front-end Development
-        <br>Interaction Design<br>HTML/CSS<br>Balsamiq<br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <div class="columns">
+          <div id="accom">
+            <p id="secondary">
+              Accomplished
+            </p>
+            <p id="tertiary">
+              <ul>
+              <li>Design Website</li>
+              <li>Branding</li>
+            </ul>
+            </p>
+          </div>
+          <div id="tools">
+            <p id="secondary">
+              Tools
+            </p>
+            <p id="tertiary">
+              <ul>
+            <li>Sketching</li><li>Wireframing</li><li>Prototyping</li><li>Mockups</li><li>Front-end Development
+            </li><li>Interaction Design</li><li>HTML/CSS</li><li>Balsamiq</li>
+          </ul>
+          </p>
+          </div>
+        </div>
       </div>
       <div class="projects">
 
         <div class="description">
-          A solemn website for fluidly guiding users through religious prayers.
+          A solemn, minimalistic website to guide users through prayers of the rosary.
           <br>
           <img src="../images/ptr.PNG" class="ptrdesktop">
           <br>
@@ -60,7 +71,7 @@
             My system was designed to be accessible to all users, regardless of exposure to praying the rosary
           <br/>
           <br/>
-          The experience and interactions that this system creates are religious.
+          The experience and interactions that this system creates are religious because they are repetitive.
           The color palette of muted white, brown and pink create an atmosphere of solemnity, enhanced by the lack of distractions.
         </div>
 
