--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -69,8 +69,16 @@
             My focus was on creating an engaging experience.
             This was done by adding images that corresponded to the text, which seems simple, but the competitors websites required studying the images and text before being able to put them together.
             My system was designed to be accessible to all users, regardless of exposure to praying the rosary
-          <br/>
-          <br/>
+          <br>
+          <br>
+          <img src="../images/ptr1.PNG" class="ptrdesktop">
+          <br>
+          <img src="../images/ptr2.PNG" class="ptrdesktop_inline">
+          <br>
+          The Meditation aspect of daily rosary prayers is automatically updated each day, creating an intitive experience.
+          <br>
+          <img src="../images/ptr3.PNG" class="ptrdesktop_inline">
+          <br>
           The experience and interactions that this system creates are religious because they are repetitive.
           The color palette of muted white, brown and pink create an atmosphere of solemnity, enhanced by the lack of distractions.
         </div>
