--- a/projects/praytherosarynyc.html
+++ b/projects/praytherosarynyc.html
@@ -42,7 +42,7 @@
               <ul>
               <li>Design Website</li>
               <li>Branding</li>
-            </ul>
+              </ul>
             </p>
           </div>
           <div id="tools">
@@ -73,11 +73,11 @@
           <br>
           <img src="../images/ptr1.PNG" class="ptrdesktop">
           <br>
-          <img src="../images/ptr2.PNG" class="ptrdesktop_inline">
+          <img src="../images/ptr2.png" class="ptrdesktop_inline">
           <br>
           The Meditation aspect of daily rosary prayers is automatically updated each day, creating an intitive experience.
           <br>
-          <img src="../images/ptr3.PNG" class="ptrdesktop_inline">
+          <img src="../images/ptr3.png" class="ptrdesktop_inline">
           <br>
           The experience and interactions that this system creates are religious because they are repetitive.
           The color palette of muted white, brown and pink create an atmosphere of solemnity, enhanced by the lack of distractions.
