--- a/projects/theatrenow.html
+++ b/projects/theatrenow.html
@@ -70,14 +70,14 @@
           <br>
           The image below represents the result of a design meeting and an interface redesign implemented in a high-fidelity prototype.
           <br>
-          <img src="../images/theatrenow2.png" class="ptrdesktop">
+          <img src="../images/theatrenow2.PNG" class="ptrdesktop">
           <br>
           <br>
           Over the 20 weeks this project covered, our sponsors presented us with a requirements pivot which changed the basis of our entire design concepts.
           <br>
           We began to redesign and prototype based on the new requirements, as well as create new features.
           <br>
-          <img src="../images/theatrenow3.png" class="ptrdesktop">
+          <img src="../images/theatrenow3.PNG" class="ptrdesktop">
           <br>
           One feature which contributed to the success of the redesign was a social media content generator.
           <br>
@@ -85,7 +85,7 @@
           <br>
           I designed a simple social media post generator which users could populate with their own data and instantly share across platforms to market their production.
           <br>
-          <img src="../images/theatrenow4.png" class="ptrdesktop">
+          <img src="../images/theatrenow4.PNG" class="ptrdesktop">
           <br>
           This generator can be used for multiple types of social media post, allowing for consistency with each production, and convenience for users.
           <br>
