--- a/index.html
+++ b/index.html
@@ -38,18 +38,22 @@
         James Ostergaard
         </p>
         <p id="bio">
-        I am a UX/UI Designer in Orange County, CA
+        I'm a Web Developer with a passion for UX/UI
+        <br>
         <br>
         </p>
         <p id="secondary">
-        My goal is to understand the context of past design so I may influence decisions for future design
+          I'm located in Orange County, CA
+
+        <!--I design for the moment-->
         </p>
         <p id="tertiary">
-        Life is chaos, designed
+          I design for the moment
+        <!-- Life is chaos, designed
         <br>
         Design is history, valued
         <br>
-        Value is reaction, reproduced
+        Value is reaction, reproduced -->
         </p>
         <a href="mailto:james@jamesostergaard.com">email</a>
         <a href="https://www.linkedin.com/in/jamesostergaard/">linkedin</a>
