--- a/projects/healthful.html
+++ b/projects/healthful.html
@@ -60,7 +60,7 @@
         <div class="description">
           A front-end project for a biomedical team
           <br>
-          <img src="../images/healthful.PNG" class="ptrdesktop">
+          <img src="../images/healthful.png" class="ptrdesktop">
           <br>
           The concept for this website is to function as a reliable hub of emerency information commonly needed by college students.
           <br>
